--- a/website/src/css/custom.css
+++ b/website/src/css/custom.css
@@ -1,3 +1,5 @@
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.2/font/bootstrap-icons.css");
+
 /**
  * Any CSS included here will be global. The classic template
  * bundles Infima by default. Infima is a CSS framework designed to
@@ -7,27 +9,75 @@
 /* You can override the default Infima variables here. */
 @font-face {
     font-family: "JetBrains Mono";
-    src: url("/font/JetBrainsMono-SemiBold.woff2");
-    /*src: url("/font/JetBrainsMono.ttf");*/
+    src: url("JetBrainsMono-SemiBold.woff2");
 }
 
-@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.2/font/bootstrap-icons.css");
+@font-face {
+    font-family: "iconfont-link";
+    src: url("iconfont-link.ttf") format('truetype');
+}
 
-strong[dark-theme='dark'] {
-    text-decoration-line: underline;
-    text-decoration-color: rgba(255, 255, 255, 0.9);
+@font-face {
+    font-family: "LXGWNeoXiHeiScreen";
+    src: url("LXGWNeoXiHeiScreen.ttf");
+}
+
+@font-face {
+    font-family: "SmileySans-Oblique";
+    src: url("SmileySans-Oblique.otf.woff2");
+}
+
+body {
+    font-family: 'LXGWNeoXiHeiScreen', serif;
+}
+
+h1,h2,h3,h4 {
+    font-family: 'SmileySans-Oblique', serif;
+}
+
+header,h1,h2 {
+    text-align: center;
+}
+
+/* 外链 */
+a[href^='http']:not([class])::before {
+    content: '\e600';
+    font-family: "iconfont-link", serif !important;
+    font-size: 0.75em;
+    font-style: normal;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+}
+
+/* 非外链 */
+a:not([class],[href^='http'])::after {
+    content: '\e685';
+    font-family: "iconfont-link", serif !important;
+    font-style: normal;
+    margin-right: 2px;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+}
+
+code:not([class]) {
+    margin-left: 3px;
+    margin-right: 3px;
+}
+
+strong:not([class]) {
+    margin-left: 3px;
+    margin-right: 3px;
 }
 
 strong {
     text-decoration-line: underline;
-    text-decoration-color: rgba(0,0,0,0.25);
-
+    text-decoration-thickness: from-font;
+    text-underline-offset: auto;
 }
-
 
 strong code {
     text-decoration-line: underline;
-    text-decoration-color: #ef5d84;
+    text-decoration-color: var(--ifm-color-primary-dark);
     /*#ef5d84: rgba(239,93,132,0.25)*/
 }
 
@@ -45,6 +95,10 @@ code {
 code[dark-theme='dark'] {
     border-color: rgba(0, 0, 0, 0.02);
     color: #ef5d84;
+}
+
+code .token-line {
+    line-height: 24px;
 }
 
 :root {
