pref(website): 正文字体位置迁移

--- a/website/src/css/custom.css
+++ b/website/src/css/custom.css
@@ -9,22 +9,22 @@
 /* You can override the default Infima variables here. */
 @font-face {
     font-family: "JetBrains Mono";
-    src: url("JetBrainsMono-SemiBold.woff2");
+    src: url("/static/fonts/JetBrainsMono-SemiBold.woff2") format('woff');
 }
 
 @font-face {
     font-family: "iconfont-link";
-    src: url("iconfont-link.ttf") format('truetype');
+    src: url("/static/fonts/iconfont-link.ttf") format('truetype');
 }
 
 @font-face {
     font-family: "LXGWNeoXiHeiScreen";
-    src: url("LXGWNeoXiHeiScreen.ttf");
+    src: url("/static/fonts/LXGWNeoXiHeiScreen.ttf") format('truetype');
 }
 
 @font-face {
     font-family: "SmileySans-Oblique";
-    src: url("SmileySans-Oblique.otf.woff2");
+    src: url("/static/fonts/SmileySans-Oblique.otf.woff2") format('woff');
 }
 
 body {
